[INTERNAL][FIX] ObjectPage: Section/Subsection focus oultine fixed in Edge browser
BCP: 1870415994

Problem: Focus outline with the workaround for IE was broken in Edge
browser.

Solution: Since Edge 15 the outline-offset property is supported, so we
can use the normal focus styling, just keep the dashed style for MS
browsers.

--- a/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSubSection.less
+++ b/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSubSection.less
@@ -204,10 +204,13 @@ html .sapUiContainer-Medium .sapUxAPObjectPageSubSectionHeader {
 	}
 }
 
-/* IE and Edge ignores outline-offset. Use an overlay: */
+html[data-sap-ui-browser^="ed"].sap-desktop .sapUxAPObjectPageSubSection:focus {
+	outline-style: dashed;
+}
+
+/* IE ignores outline-offset. Use an overlay: */
 /* TODO remove after 1.62 version */
-html[data-sap-ui-browser^="ie"].sap-desktop,
-html[data-sap-ui-browser^="ed"].sap-desktop {
+html[data-sap-ui-browser^="ie"].sap-desktop {
 	.sapUxAPObjectPageSubSection:focus {
 		outline: none;
 		position: relative;
